# RayTracerChallenge

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  lighting.cpp  lighting.hpp  lights.hpp  main.cpp  materials.hpp  matrix.cpp  matrix.hpp  ray.cpp  ray.hpp  sphere.hpp  test_scenes.cpp  transformations.hpp  tuples.hpp  util.hpp  world.cpp  world.hpp
src/accel/: bounding_box.cpp  bounding_box.hpp
src/geometry/: intersection.cpp  intersection.hpp  ray.cpp  ray.hpp  shapes.cpp  shapes.hpp  sphere.hpp
src/geometry/shapes/: all_shapes.hpp  cone.cpp  cone.hpp  cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  group.cpp  group.hpp  obj_parser.cpp  obj_parser.hpp  plane.hpp  shapes.cpp  shapes.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/math/: color.hpp  matrix.cpp  matrix.hpp  transformations.cpp  transformations.hpp  tuples.hpp  util.hpp
src/rendering/: camera.cpp  camera.hpp  lighting.cpp  lighting.hpp
src/scene/: lights.hpp  materials.hpp  patterns.cpp  patterns.hpp  world.cpp  world.hpp
tests/: boundingbox.cpp  camera.cpp  canvas.cpp  groups.cpp  matrices.cpp  patterns.cpp  rays.cpp  reflection.cpp  refraction.cpp  shading.cpp  shadows.cpp  shapes.cpp  test.cpp  transformations.cpp  triangles.cpp  tuples.cpp  world.cpp
